Fix lang selector not centered on Welcome page

--- a/src/app.css
+++ b/src/app.css
@@ -2858,7 +2858,7 @@ ul.link-list li a .icon {
 /* LANG SELECTOR */
 
 .lang-selector {
-  display: flex;
+  display: inline-flex;
   gap: 4px;
   align-items: center;
 
